<resources>
    <string name="app_name">Showcase Themoviedb</string>
    <string name="app_version">ver %1$s</string>

    <string name="start">Start</string>

    <string name="onboarding_first_title">Keep track on\nyour opportunities</string>
    <string name="onboarding_first_desc">Don\’t let your opportunities slip away! Track your follow up progress to help you manage better</string>
    <string name="onboarding_second_title">Record your\nvisits activities</string>
    <string name="onboarding_second_desc">Record every activity you did on a visit, from what did you do, is there any task, or even record the details of your call log.</string>
    <string name="onboarding_third_title">Easy access to\nproduct informations</string>
    <string name="onboarding_third_desc">Easily find information your customer needs about our products, stocks info, and all other details.</string>

    <string name="login_message">Please Sign In</string>

    <string name="no_internet">No internet connection</string>
    <string name="server_not_available">Server not available. Please try again later.</string>
    <string name="token_expired">Session expired. You have been logged out of your account.</string>

    <string name="employee_id_field">Employee ID</string>
    <string name="employee_id_field_error">Employee ID cannot be empty</string>
    <string name="password_field">Password</string>
    <string name="password_field_error">Password cannot be empty</string>

    <string name="forgot_password_button"><u>Forgot Password?</u></string>
    <string name="login_button">Sign In</string>
    <string name="check_in">Check In</string>

    <string name="pending_transactions">Pending Transactions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="help">Help</string>
    <string name="logout">Sign Out</string>
    <string name="notification">Notification</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="coming_soon">Coming soon.</string>

    <string name="greetings_morning">Selamat Pagi</string>
    <string name="greetings_noon">Selamat Siang</string>
    <string name="greetings_evening">Selamat Sore</string>
    <string name="greetings_night">Selamat Malam</string>

    <string name="home_left_info_sales">Kunjungan Anda bulan ini</string>
    <string name="home_left_info_nonsales">Total Customer Tim Anda</string>
    <string name="home_right_info_sales">Total opportunity yang bisa Anda dapatkan</string>
    <string name="home_right_info_nonsales">Total opportunity yang bisa tim Anda dapatkan</string>

    <string name="card_info_sales">Today\'s Visit</string>
    <string name="sales_visit_progress">%1$d of %2$d completed</string>
    <string name="sales_visit_done">Good job! You have completed today\'s visit target!</string>
    <string name="approval_request_desc">Transaksi yang belum Anda setujui</string>
    <string name="approval_request_done_title">Tidak ada persetujuan tertunda</string>
    <string name="approval_request_done_desc">Lihat daftar persetujuan.</string>

    <string name="catalogues">Catalogues</string>
    <string name="accounts">Accounts</string>
    <string name="spare_part">Spare Parts</string>
    <string name="events">Events</string>
    <string name="approvals">Approvals</string>
    <string name="opportunities">Opportunities</string>

    <string name="visit_target">Visit Target</string>
    <string name="record_activity_detail">Record Activity Detail</string>

    <string name="appointment">Appointment</string>
    <string name="task">Task</string>
    <string name="call_log">Call Log</string>

    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="venue">Venue</string>
    <string name="checked_in">Checked In</string>

    <string name="no_data">No data</string>
    <string name="save">Save</string>
    <string name="show_more">Show more</string>
    <string name="show_less">Show less</string>

    <!-- Opportunity -->
    <string name="opportunity_account">Account</string>
    <string name="opportunity_value">Value</string>
    <string name="opportunity_notes">Notes</string>

    <!-- Appointment Detail -->
    <string name="appointment_details">Appointment Details</string>
    <string name="task_details">Task Details</string>
    <string name="call_log_details">Call Log Details</string>
    <string name="appointment_description">Please explain the detail of your activity</string>
    <string name="appointment_account">Account</string>
    <string name="appointment_opportunity">Opportunity</string>
    <string name="appointment_activity_detail">Activity Details</string>
</resources>
