<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.hino.hearts.ui.opportunity.detail.activities.ActivitiesViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/dimens_24dp"
        tools:context=".ui.opportunity.detail.activities.ActivitiesFragment">

        <LinearLayout
            android:id="@+id/ll_visit_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_appointment"
                style="@style/ButtonText14spBoldWhite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_dragdrop_list_background"
                android:backgroundTint="@color/red"
                android:stateListAnimator="@null"
                android:text="@string/appointment" />

            <Button
                android:id="@+id/btn_task"
                style="@style/ButtonText14spBoldGrey4a"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_dragdrop_list_background"
                android:backgroundTint="@color/white"
                android:stateListAnimator="@null"
                android:text="@string/task" />

            <Button
                android:id="@+id/btn_calllog"
                style="@style/ButtonText14spBoldGrey4a"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/shape_dragdrop_list_background"
                android:backgroundTint="@color/white"
                android:stateListAnimator="@null"
                android:text="@string/call_log" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_appointment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ll_visit_header"
            android:visibility="@{viewModel.isEmpty() ? View.GONE : View.VISIBLE}"
            tools:itemCount="4"
            tools:listitem="@layout/item_opportunity_activity" />

        <TextView
            android:id="@+id/tv_no_data"
            style="@style/DescGrey36"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ll_visit_header"
            android:gravity="center"
            android:text="@string/no_data"
            android:visibility="@{viewModel.isEmpty() ? View.VISIBLE : View.GONE}"
            tools:visibility="gone" />

        <include
            android:id="@+id/layout_custom_loading"
            layout="@layout/layout_custom_loading"
            android:visibility="gone"
            tools:visibility="gone" />
    </RelativeLayout>
</layout>