<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.hino.hearts.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        tools:context=".ui.login.LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_login_bottomsheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bottomsheet_view"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tv_login_title"
                style="@style/TitleGrey4a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimens_40dp"
                android:layout_marginTop="@dimen/dimens_52dp"
                android:text="@string/login_message"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputlayout_employee_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimens_40dp"
                android:layout_marginTop="@dimen/dimens_40dp"
                android:layout_marginEnd="@dimen/dimens_40dp"
                android:enabled="@{viewModel.showLoading ? false : true}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_login_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_employee_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/employee_id_field"
                    android:inputType="text"
                    android:textColor="@color/grey4a"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/text_16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputlayout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimens_40dp"
                android:layout_marginTop="@dimen/dimens_32dp"
                android:layout_marginEnd="@dimen/dimens_40dp"
                android:enabled="@{viewModel.showLoading ? false : true}"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/colorSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputlayout_employee_id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edittext_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_field"
                    android:inputType="textPassword"
                    android:textColor="@color/grey4a"
                    android:textColorHint="@color/black"
                    android:textSize="@dimen/text_16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimens_40dp"
                android:layout_marginEnd="@dimen/dimens_40dp"
                android:layout_marginBottom="@dimen/dimens_30dp"
                android:enabled="@{viewModel.showLoading ? false : true}"
                android:paddingStart="@dimen/dimens_40dp"
                android:paddingTop="@dimen/dimens_15dp"
                android:paddingEnd="@dimen/dimens_40dp"
                android:paddingBottom="@dimen/dimens_15dp"
                android:text="@string/login_button"
                app:cornerRadius="@dimen/dimens_8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputlayout_password"
                app:layout_constraintVertical_bias="0" />

            <TextView
                android:id="@+id/textview_forgot_password"
                style="@style/ButtonText14spRed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimens_40dp"
                android:enabled="@{viewModel.showLoading ? false : true}"
                android:text="@string/forgot_password_button"
                app:layout_constraintBottom_toBottomOf="@id/btn_login"
                app:layout_constraintEnd_toStartOf="@id/btn_login"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btn_login" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey50transparency"
            android:elevation="@dimen/dimens_4dp"
            android:visibility="@{viewModel.showLoading ? View.VISIBLE : View.GONE}"
            tools:visibility="gone">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_loading"
                style="@style/CardWhite"
                android:layout_width="@dimen/dimens_70dp"
                android:layout_height="@dimen/dimens_70dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ProgressBar
                    style="@style/CircularProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>