<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.hino.hearts.ui.opportunity.appointment.AppointmentDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.opportunity.appointment.AppointmentDetailActivity">

        <include
            android:id="@+id/tb_back"
            layout="@layout/layout_toolbar_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsv_appointment_details"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/layout_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tb_back">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_appointment_title"
                    style="@style/Title24spGrey4a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimens_24dp"
                    android:layout_marginTop="@dimen/dimens_16dp"
                    android:layout_marginEnd="@dimen/dimens_24dp"
                    android:layout_marginBottom="@dimen/dimens_16dp"
                    android:text="@string/appointment_details"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_appointment_desc"
                    style="@style/DescGrey62"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimens_24dp"
                    android:layout_marginTop="@dimen/dimens_8dp"
                    android:layout_marginEnd="@dimen/dimens_24dp"
                    android:text="@string/appointment_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_appointment_title" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tl_acc_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimens_24dp"
                    android:layout_marginTop="@dimen/dimens_16dp"
                    android:layout_marginEnd="@dimen/dimens_24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_appointment_desc">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tv_acc_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@{(!viewModel.isReadOnlyMode &amp;&amp; !viewModel.lockAccountOpportunity) ? @drawable/dropdown : null}"
                        android:enabled="@{!viewModel.isReadOnlyMode &amp;&amp; !viewModel.lockAccountOpportunity}"
                        android:focusable="false"
                        android:clickable="true"
                        android:hint="@string/appointment_account"
                        android:inputType="text"
                        android:text="@{viewModel.selectedAccountName}"
                        android:theme="@style/TextInputLayoutHint"
                        tools:ignore="KeyboardInaccessibleWidget" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tl_opportunity_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimens_24dp"
                    android:layout_marginTop="@dimen/dimens_16dp"
                    android:layout_marginEnd="@dimen/dimens_24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tl_acc_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tv_opportunity_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@{(!viewModel.isReadOnlyMode &amp;&amp; !viewModel.lockAccountOpportunity) ? @drawable/dropdown : null}"
                        android:enabled="@{!viewModel.isReadOnlyMode &amp;&amp; !viewModel.lockAccountOpportunity &amp;&amp; viewModel.selectedAccountId != -1}"
                        android:focusable="false"
                        android:hint="@string/appointment_opportunity"
                        android:inputType="text"
                        android:text="@{viewModel.selectedOpportunityName}"
                        android:theme="@style/TextInputLayoutHint" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tl_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimens_24dp"
                    android:layout_marginTop="@dimen/dimens_16dp"
                    android:layout_marginEnd="@dimen/dimens_24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tl_opportunity_field">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tv_activity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="@{!viewModel.isReadOnlyMode}"
                        android:focusable="@{!viewModel.isReadOnlyMode}"
                        android:gravity="top|start"
                        android:hint="@string/appointment_activity_detail"
                        android:inputType="textMultiLine|textCapSentences"
                        android:lines="4"
                        android:maxLines="5"
                        android:minLines="1"
                        android:scrollbars="vertical"
                        android:text="@{viewModel.activityDetail}"
                        android:theme="@style/TextInputLayoutHint" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <RelativeLayout
            android:id="@+id/layout_button"
            android:layout_width="fill_parent"
            android:layout_height="85dp"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:visibility="@{!viewModel.isReadOnlyMode ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:background="@color/white"
                android:gravity="center_horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimens_24dp"
                    android:layout_marginEnd="@dimen/dimens_24dp"
                    android:layout_marginBottom="@dimen/dimens_24dp"
                    android:onClick="@{() -> viewModel.onSavePressed()}"
                    android:paddingTop="@dimen/dimens_15dp"
                    android:paddingBottom="@dimen/dimens_15dp"
                    android:text="@string/save"
                    app:layout_constraintVertical_bias="0" />

            </RelativeLayout>
        </RelativeLayout>

        <include
            android:id="@+id/layout_custom_loading"
            layout="@layout/layout_custom_loading"
            android:visibility="gone"
            tools:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>