<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.hino.hearts.ui.event.eventinformation.EventInformationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.event.eventinformation.EventInformationFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_event_info_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_24dp"
            android:layout_marginTop="@dimen/dimens_20dp"
            android:layout_marginEnd="@dimen/dimens_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/ll_event_info_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/home_view"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_event_info_date_title"
                    style="@style/Desc14spGrey4a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date" />

                <TextView
                    android:id="@+id/tv_event_info_date"
                    style="@style/Title14spGrey4a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens_4dp"
                    android:text="@{viewModel.date}"
                    tools:text="14 Feb 2020" />

            </LinearLayout>

            <View
                android:id="@+id/home_view"
                android:layout_width="@dimen/dimens_1dp"
                android:layout_height="0dp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/ll_event_info_time"
                app:layout_constraintEnd_toStartOf="@id/ll_event_info_time"
                app:layout_constraintStart_toEndOf="@id/ll_event_info_date"
                app:layout_constraintTop_toTopOf="@id/ll_event_info_time" />

            <LinearLayout
                android:id="@+id/ll_event_info_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@id/home_view"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_event_info_time_title"
                    style="@style/Desc14spGrey4a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time" />

                <TextView
                    android:id="@+id/tv_event_info_time"
                    style="@style/Title14spGrey4a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens_4dp"
                    android:text="@{viewModel.time}"
                    tools:text="09:00 AM" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_event_venue_title"
            style="@style/Desc14spGrey4a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_24dp"
            android:layout_marginTop="@dimen/dimens_16dp"
            android:layout_marginEnd="@dimen/dimens_24dp"
            android:text="@string/venue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_event_info_date_time" />

        <TextView
            android:id="@+id/tv_event_venue"
            style="@style/Title14spGrey4a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_24dp"
            android:layout_marginTop="@dimen/dimens_4dp"
            android:layout_marginEnd="@dimen/dimens_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@{viewModel.venue}"
            app:layout_constraintTop_toBottomOf="@id/tv_event_venue_title"
            tools:text="HINO Indonesia" />

        <TextView
            android:id="@+id/tv_event_venue_location"
            style="@style/Title14spGrey4a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_24dp"
            android:layout_marginTop="@dimen/dimens_4dp"
            android:layout_marginEnd="@dimen/dimens_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@{viewModel.location}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_event_venue"
            tools:text="Jl. Gatot Subroto Km. 8, 5, Manis Jaya, Kec. Jatiuwung, Kota Tangerang, Banten 15111" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>